styles.css
#house {
    position: relative;
    width: 500px;
    height: 400px;
    background-color: sandybrown;
    border: 10px solid maroon;
    margin: 5vw auto;
}

#house > div {
    position: absolute;
}

#chimney {
    top: -100px;
    left: 360px;
    width: 80px;
    height: 100px;
    background-color: #ccc;
    border: 5px solid black;
}

#roof {
    top: 0;
    left: 0;
    width: 490px;
    height: 100px;
    background-color: burlywood;
    border: 5px solid brown;
     background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(0,0,0,0.1) 10px, rgba(0,0,0,0.1) 20px);
}

#window-1, #window-2 {
    width: 80px;
    height: 100px;
    min-height: 60px;
    border: 5px solid maroon;
    background-color: maroon;
}

#window-1 {
    top: 150px;
    left: 30px;
}

#window-2 {
    top: 150px;
    right: 30px;
}

#door {
    position: absolute;
    bottom: 0; 
    left: 200px;
    width: 110px;
    height: 180px;
    background-color: #e2e8f0;
    border: 4px solid #753800;
    border-bottom: none;
}

